<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

<!--    <Button-->
<!--        android:id="@+id/button_first"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/next"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/horizontal_but"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/slow_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_but"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/vertical_but"
        android:layout_width="115dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/vertical_line_btn"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/circle_but"
        android:layout_width="115dp"
        android:layout_height="106dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:text="@string/circle_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/fast_speed"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/circle_but"
        app:rippleColor="#2196F3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/medium_speed"
        app:layout_constraintStart_toEndOf="@+id/horizontal_but"
        app:layout_constraintTop_toBottomOf="@+id/circle_but"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="115dp"
        android:layout_height="106dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/semi_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/circle_but"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button10"
        android:layout_width="150dp"
        android:layout_height="135dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="124dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="119dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:text="@string/complex_line_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/vertical_but"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/horizontal_line_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>