<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Relaxation">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/relaxation"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:src="@drawable/horizontalline" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:src="@drawable/verticalline" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:src="@drawable/complexline" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:src="@drawable/circle" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:src="@drawable/semicircle" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/slow_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <Button
        android:id="@+id/button11"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/fast_speed"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/medium_speed"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <Button
        android:id="@+id/action_btn"
        android:layout_width="136dp"
        android:layout_height="84dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="72dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />
</androidx.constraintlayout.widget.ConstraintLayout>