<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/training_btn"
        android:layout_width="123dp"
        android:layout_height="125dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/relaxation"
        android:onClick="navigateToTrainingActivity"
        android:scaleType="centerInside"
        android:src="@drawable/yoga"
        app:layout_constraintStart_toEndOf="@+id/relaxation_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/relaxation_btn"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="123dp"
        android:layout_height="125dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/training"
        android:onClick="navigateToRelaxationActivity"
        android:scaleType="centerInside"
        android:src="@drawable/meditation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="sans-serif"
        android:text="@string/training"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="57dp"
        android:fontFamily="sans-serif"
        android:text="@string/relaxation"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="157dp"
        android:layout_height="92dp"
        android:layout_below="@+id/training_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="139dp"
        android:text="@string/connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training_btn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="21dp"
        android:clickable="true"
        android:contentDescription="@string/settings"
        android:focusable="true"
        android:onClick="navigateToSettingsActivity"
        android:src="@drawable/settings"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="659dp" />

</RelativeLayout>